objects/tysosla__Business_Hours_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps Business Hours for Accounts</description>
    <fields>
        <fullName>tysosla__BusinessHoursId__c</fullName>
        <description>The ID of the Business Hours.</description>
        <inlineHelpText>The ID of the Business Hours.</inlineHelpText>
        <label>BusinessHoursId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Field__c</fullName>
        <description>The api name of the field.</description>
        <inlineHelpText>The api name of the field.</inlineHelpText>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Object__c</fullName>
        <description>The api name of the object.</description>
        <inlineHelpText>The api name of the object.</inlineHelpText>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Value__c</fullName>
        <description>The matched value in the field.</description>
        <inlineHelpText>The matched value in the field.</inlineHelpText>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Business Hours Mapping</label>
</CustomObject>